--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -26,7 +26,7 @@ jobs:
           command: "response-time"
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
-          SECRET_SITE: ${{ secrets.SECRET_SITE }}
+          # SECRET_SITE: ${{ secrets.SECRET_SITE }}
           SLACK_APP_ACCESS_TOKEN: ${{ secrets.SLACK_APP_ACCESS_TOKEN }}
       - name: Update response time
         uses: upptime/uptime-monitor@master
@@ -34,7 +34,7 @@ jobs:
           command: "readme"
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
-          SECRET_SITE: ${{ secrets.SECRET_SITE }}
+          # SECRET_SITE: ${{ secrets.SECRET_SITE }}
       - name: Generate graphs
         uses: benc-uk/workflow-dispatch@v1
         with:
