--- a/.github/workflows/response-time.yml
+++ b/.github/workflows/response-time.yml
@@ -25,5 +25,5 @@ jobs:
           command: "response-time"
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
-          SECRET_SITE: ${{ secrets.SECRET_SITE }}
+          # SECRET_SITE: ${{ secrets.SECRET_SITE }}
           SLACK_APP_ACCESS_TOKEN: ${{ secrets.SLACK_APP_ACCESS_TOKEN }}
