--- a/.github/workflows/update-template.yml
+++ b/.github/workflows/update-template.yml
@@ -23,7 +23,7 @@ jobs:
           ref: ${{ github.head_ref }}
           token: ${{ secrets.GH_PAT }}
       - name: Setup Node.js
-        uses: actions/setup-node@latest
+        uses: actions/setup-node@2.1.2
         with:
           node-version: 14
       - name: Update template
