--- a/.github/workflows/graphs.yml
+++ b/.github/workflows/graphs.yml
@@ -10,14 +10,14 @@
 name: Graphs CI
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
   repository_dispatch:
     types: [graphs]
   workflow_dispatch:
 jobs:
   release:
     name: Generate graphs
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
@@ -27,6 +27,6 @@ jobs:
       - name: Generate graphs
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "graphs"
+          command: 'graphs'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
