--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -11,14 +11,14 @@ name: Setup CI
 on:
   push:
     paths:
-      - ".upptimerc.yml"
+      - '.upptimerc.yml'
   repository_dispatch:
     types: [setup]
   workflow_dispatch:
 jobs:
   release:
     name: Setup Upptime
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
@@ -28,20 +28,20 @@ jobs:
       - name: Update template
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "update-template"
+          command: 'update-template'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Update response time
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "response-time"
+          command: 'response-time'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
       - name: Update summary in README
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "readme"
+          command: 'readme'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate graphs
@@ -52,13 +52,13 @@ jobs:
       - name: Generate site
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "site"
+          command: 'site'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: peaceiris/actions-gh-pages@v3.7.3
         name: GitHub Pages Deploy
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: "site/status-page/__sapper__/export/"
-          user_name: "Upptime Bot"
-          user_email: "73812536+upptime-bot@users.noreply.github.com"
+          publish_dir: 'site/status-page/__sapper__/export/'
+          user_name: 'Upptime Bot'
+          user_email: '73812536+upptime-bot@users.noreply.github.com'
