--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -10,14 +10,14 @@
 name: Static Site CI
 on:
   schedule:
-    - cron: "0 1 * * *"
+    - cron: '0 1 * * *'
   repository_dispatch:
     types: [static_site]
   workflow_dispatch:
 jobs:
   release:
     name: Build and deploy site
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Checkout
@@ -28,13 +28,13 @@ jobs:
       - name: Generate site
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "site"
+          command: 'site'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: peaceiris/actions-gh-pages@v3.7.3
         name: GitHub Pages Deploy
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: "site/status-page/__sapper__/export/"
-          user_name: "Upptime Bot"
-          user_email: "73812536+upptime-bot@users.noreply.github.com"
+          publish_dir: 'site/status-page/__sapper__/export/'
+          user_name: 'Upptime Bot'
+          user_email: '73812536+upptime-bot@users.noreply.github.com'
