--- a/.github/workflows/summary.yml
+++ b/.github/workflows/summary.yml
@@ -10,14 +10,14 @@
 name: Summary CI
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
   repository_dispatch:
     types: [summary]
   workflow_dispatch:
 jobs:
   release:
     name: Generate README
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
@@ -27,14 +27,14 @@ jobs:
       - name: Update summary in README
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "readme"
+          command: 'readme'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Run readme-repos-list
         uses: koj-co/readme-repos-list@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          query: "topic:upptime"
+          query: 'topic:upptime'
           size: 20
           max: 1000
           one-per-owner: true
