--- a/.github/workflows/update-template.yml
+++ b/.github/workflows/update-template.yml
@@ -10,14 +10,14 @@
 name: Update Template CI
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
   repository_dispatch:
     types: [update_template]
   workflow_dispatch:
 jobs:
   release:
     name: Build
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
@@ -27,6 +27,6 @@ jobs:
       - name: Update template
         uses: upptime/uptime-monitor@master
         with:
-          command: "update-template"
+          command: 'update-template'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
