--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -10,14 +10,14 @@
 name: Updates CI
 on:
   schedule:
-    - cron: "0 3 * * *"
+    - cron: '0 3 * * *'
   repository_dispatch:
     types: [updates]
   workflow_dispatch:
 jobs:
   release:
     name: Deploy updates
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
