--- a/.github/workflows/uptime.yml
+++ b/.github/workflows/uptime.yml
@@ -10,14 +10,14 @@
 name: Uptime CI
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: '*/5 * * * *'
   repository_dispatch:
     types: [uptime]
   workflow_dispatch:
 jobs:
   release:
     name: Check status
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
@@ -27,7 +27,7 @@ jobs:
       - name: Check endpoint status
         uses: upptime/uptime-monitor@v1.26.1
         with:
-          command: "update"
+          command: 'update'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
